@@ -1,4 +1,4 @@
-m4_pattern_forbid([^URBI_])dnl
+m4_pattern_forbid([^URBI_])
 
 AC_PREREQ([2.60])
 
